# combine-racers

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  save.ron
.github/workflows/: release.yaml
assets/: combine.glb  track_1.glb  track_short.glb  tracktest.glb
src/: countdown.rs  game_over.rs  leaderboard.rs  loading.rs  main.rs  main_menu.rs  music_fade_in.rs  random_name.rs  save.rs  settings.rs  ui.rs
wasm/: index.html
