[package]
name = "combine-racers"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inspector = ["bevy-inspector-egui"]
debugdump = ["bevy_mod_debugdump"]

[dependencies]
bevy = { version = "0.13", features = ["wav"] }
bevy_rapier3d = "0.25"
bevy_asset_loader = "0.20"
bevy-inspector-egui = { version = "0.23", optional = true }
leafwing-input-manager = "0.13"
bevy_jornet = { git = "https://github.com/rparrett/jornet", branch = "event-0.13" }
bevy_tiling_background = { git = "https://github.com/BraymatterOrg/bevy_tiling_background.git", rev = "c84395d" }
bevy_mod_debugdump = { version = "0.10", optional = true }
bevy-alt-ui-navigation-lite = "0.1"
bevy_pipelines_ready = "0.3"

interpolation = "0.2"
serde = "*"
ron = "0.8"
rand = "0.8"

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["console", "Window", "Storage"] }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
