[package]
name = "combine-racers"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inspector = ["bevy-inspector-egui"]
debugdump = ["bevy_mod_debugdump"]

[dependencies]
bevy = { version = "0.14", features = ["wav"] }
bevy_rapier3d = "0.27"
bevy_asset_loader = "0.21"
bevy-inspector-egui = { version = "0.25", optional = true }
leafwing-input-manager = "0.14"
# https://github.com/vleue/jornet/pull/296
bevy_jornet = { git = "https://github.com/rparrett/jornet.git", branch = "reflect-player-14" }
bevy_tiling_background = { version = "0.11" }
bevy_mod_debugdump = { version = "0.11", optional = true }
bevy-alt-ui-navigation-lite = "0.2"
bevy_pipelines_ready = "0.4"
bevy_simple_prefs = "0.3"

interpolation = "0.2"
rand = "0.8"

# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["console", "Window", "Storage"] }

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.web-dist]
inherits = "dist"
opt-level = "s"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
